--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
 	<div id="main">
 		<div class="parallax">
+			<!-- LOGOS -->
 			<div class="row">
 				<div class="col-md-4 col-xs-4">
 					<img src="images/Aavishkar Logo Final (RGB).png" alt="" class="img-responsive" style="width: 35%;">
 				</div>
 				<div class="col-md-4 col-xs-4" style=" margin-top: 3%; margin-left: 5%;" >
-					<img src="images/spaceship.png" class="animated infinite pulse spaceship" id="spaceship" style="width: 20%; z-index: 1; position: fixed; left: 50%; margin-left: -10%; top: 5%;">
+					<img src="images/spaceship2.png" class="animated infinite pulse spaceship" id="spaceship" style="width: 20%; z-index: 1; position: fixed; left: 50%; margin-left: -10%; top: 5%;">
 				</div>
 				<div class="col-md-4 col-xs-4" style="width: 30%; margin-right: -5%">
 					<div class="logos" style="margin-top: 5%;">
@@ -30,15 +31,14 @@
 				    </div>
 				</div>
 			</div>
+			<!-- TypedJS  -->
 			<div class="row">
 				<div class="col-md-4 col-xs-4" style="left: 50%; margin-top: 13%; height: 20%; width: 50%; z-index: 1; margin-left: -12.5%">
-					<span><img src="./images/alien.png" alt="alien" class="alien"></span><span class="type" style="color: #fff"></span>
+					<span class="type" style="color: #fff"></span>
 				</div>
 			</div>
-			<!-- <div class="img-responsive">
-				<img src="images/spaceship.png" class="animated infinite pulse spaceship" id="spaceship" style="width: 20%; z-index: 1; position: fixed; left: 50%; margin-left: -10%; top: 5%;">
-			</div> -->
-		    <div class="parallax__layer parallax__layer__0" style="width: 100%; height: 100%;">
+			<!-- PARALLAX EFFECT -->
+		    <div class="parallax__layer parallax__layer__0" style="width: 110%; height: 100%;">
 		        <img src="images/layers/stars.png" />
 		    </div>
 		    <div class="parallax__layer parallax__layer__1" style="width: 60%;">
@@ -50,18 +50,21 @@
 		    <div class="parallax__layer parallax__layer__3" style="width: 60%; opacity: 0.6; left: 20%">
 		        <img src="images/layers/04-100.png" />
 		    </div>
-		    <div class="parallax__layer parallax__layer__4">
-		        <img src="images/layers/06-100.png" />
+		    <div class="parallax__layer parallax__layer__4" style="width: 50%; opacity: 0.8; left: 25%">
+		        <img src="images/layers/01-100.png" />
 		    </div>
 		    <div class="parallax__layer parallax__layer__5">
-		        <img src="images/layers/07-100.png" />
+		        <img src="images/layers/06-100.png" />
 		    </div>
 		    <div class="parallax__layer parallax__layer__6">
+		        <img src="images/layers/07-100.png" />
+		    </div>
+		    <div class="parallax__layer parallax__layer__7">
 		        <img src="images/layers/05-100.png" />
 		    </div>
 		    <div class="parallax__cover" id="section02">
 		    	<div class="row">
-					<div class="col-md-6 col-md-offset-3" class="details">
+					<div class="col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3" class="details">
 						<h1>About Us</h1>
 						<div class="content">
 							<p>
@@ -69,7 +72,7 @@
 			  				</p>
 						</div>	
 					</div>
-					<div class="col-md-2 col-md-offset-1" style="margin-top: 8%;">
+					<div class="col-md-1 col-xs-1" style="margin-top: 8%;">
 						<img src="images/spaceship.png" alt="" class="img-responsive side-spaceship">
 					</div>
 				</div>
