--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
 </head>
 <body>
 	<div id="main">
+		<div class="row" style="z-index:10; position: fixed; display: block">
+			<div class="col-md-4">
+				<img src="images/Aavishkar Logo Final (WHITE).png" alt="" class="img-responsive" style="width: 35%;">
+			</div>
+		</div>
 		<div class="parallax">
 			<div class="row">
-				<div class="col-md-4 col-xs-4">
-					<img src="images/Aavishkar Logo Final (RGB).png" alt="" class="img-responsive" style="width: 35%;">
+				<div class="col-md-4 col-xs-4" style="z-index: 20; display: block; margin-top: 3%; margin-left: 5%;" >
+					<img src="images/spaceship.png" class="animated infinite pulse spaceship" id="spaceship" style="width: 20%; position: fixed; left: 50%; margin-left: -10%; top: 5%;">
 				</div>
-				<div class="col-md-4 col-xs-4" style=" margin-top: 3%; margin-left: 5%;" >
-					<img src="images/spaceship.png" class="animated infinite pulse spaceship" id="spaceship" style="width: 20%; z-index: 1; position: fixed; left: 50%; margin-left: -10%; top: 5%;">
-				</div>
-				<div class="col-md-4 col-xs-4" style="width: 30%; margin-right: -5%">
-					<div class="logos" style="margin-top: 5%;">
+				<div class="col-md-offset-4 col-xs-offset-4 col-md-4 col-xs-4" style="width: 30%; margin-right: -5%">
+					<div class="logos" style="z-index: 20; display:block; margin-top: 5%;">
 				       	<img class="nit_logo" src="./images/nit.png" alt="NIT Durgapur" class="img-responsive" style="width: 15%;">
 				        <img class="logo" src="./images/white_line.png" class="img-responsive" style="width: 15%;">
 				        <img class="logo" src="./images/glug.png" class="img-responsive" style="width: 15%;">
@@ -31,7 +33,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4 col-xs-4" style="left: 50%; margin-top: 13%; height: 20%; width: 50%; z-index: 1; margin-left: -12.5%">
+				<div class="col-md-4 col-xs-4" style="left: 50%; margin-top: 20%; height: 20%; width: 50%; z-index: 1; margin-left: -12.5%">
 					<span><img src="./images/alien.png" alt="alien" class="alien"></span><span class="type" style="color: #fff"></span>
 				</div>
 			</div>
