--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		    </div>
 		    <div class="parallax__cover" id="section02">
 		    	<div class="row">
-					<div class="col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3" class="details">
+					<div id="obj" class="col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3 base" class="details">
 						<h1>About Us</h1>
 						<div class="content">
 							<p>
@@ -72,7 +72,7 @@
 			  				</p>
 						</div>	
 					</div>
-					<div class="col-md-1 col-xs-1" style="margin-top: 8%;">
+					<div class="col-md-1 col-xs-1 scroll_obj" style="margin-top: 8%;">
 						<img src="images/spaceship.png" alt="" class="img-responsive side-spaceship">
 					</div>
 				</div>
@@ -131,7 +131,13 @@
 
 <script src="vendor/js/jquery-3.3.1.min.js"></script>
 <script src="./js/typed.js"></script>
+<!-- ScrollMagic -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
 <script src="vendor/js/bootstrap.min.js"></script>
+<!--  -->
 <script type="text/javascript" src="vendor/js/particles.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </html>
